<resources>
    <string name="app_name">PhoneHelper</string>
    <string name="buttongetphoneinfo">获取手机信息</string>
    <string name="phoneinfo_id_text">手机信息</string>
    <string name="buttonbluetoothconwifi">蓝牙控制wifi</string>
    <string name="buttonbluetoothtest">蓝牙测试</string>
    <string name="buttonwifitest">个人wifi测试</string>
    <string name="buttonwifitest1">个人wifi测试1</string>

    <string name="LogView">调试信息</string>
    <string name="buttongosystemcontrol">控制系统音量</string>
    <string name="buttonyytest">控制yy</string>

    <string name="access_name">测试一下yy自动化</string>


</resources>