<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/buttongosystemcontrol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttongosystemcontrol" />

    <Button
        android:id="@+id/buttongetphoneinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttongetphoneinfo" />

    <Button
        android:id="@+id/buttonbluetoothconwifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonbluetoothconwifi" />

    <Button
        android:id="@+id/buttonbluetoothtest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonbluetoothtest" />

    <Button
        android:id="@+id/buttonwifitest1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickbuttonwifitest"
        android:text="@string/buttonwifitest1" />

    <Button
        android:id="@+id/buttonwifitest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonwifitest" />


        <TextView
            android:id="@+id/LogView"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:layout_height="133dp"
            android:text="@string/LogView" />




</LinearLayout>